--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  </head>
  <body>
   <header>
-    <h1>Drury Restaurant</h1>
+    <h1>my restturant</h1>
   </header>
   <main>
     <div class="Description">
