--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
      <img src="https://images.pexels.com/photos/539451/pexels-photo-539451.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="A picture of a mindblowing lenti soup" height="180" id="five">
     <h2>Menu</h2>
     <ol>
+     <li>fied Omena -Kshs 20 </li>
       <li>Fried Chicken - Kshs. 300</li>
       <li>Fried Tilapia - Kshs. 350</li>
       <li>lentil Soup - Kshs. 200</li>
